--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
     "next": "14.0.3",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
@@ -17,5 +19,8 @@
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
     "swr": "^2.2.4"
+  },
+  "devDependencies": {
+    "postcss-loader": "^7.3.4"
   }
 }
