--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "@vercel/postgres": "^0.5.1",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "next": "14.0.3",
