--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
     "swr": "^2.2.4"
