--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "next": "14.0.3",
     "next-redux-wrapper": "^8.1.0",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
